DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Mar-19-2004 patrickh    Using a search path to find configuration files is
                        working again for the first time since September 2001.
                        NEW VERSION: 0.16.0
Dec-31-2003 patrickh    Removed unneeded functions jccl::stringToVar(),
                        jccl::hasSeparator(), jccl::getRemainder(), and
                        jccl::getFirstNameComponent().
                        NEW VERSION: 0.15.1
Nov-17-2003 patrickh    The factory function for remote run-time
                        reconfiguration plug-ins now take a parameter that is
                        of type jccl::ConfigManager*.
                        NEW VERSION: 0.15.0
Nov-09-2003 patrickh    Refactored the CORBA-based remote run-time
                        reconfiguration code so that it can be loaded at
                        run-time as a plug-in.
                        NEW VERSION: 0.14.0
Nov-04-2003 patrickh    Removed the storage of multiple versions of individaul
                        configuration definitions in
                        jccl::ConfigDefinitionRepository.
                        NEW VERSION: 0.13.0
Oct-15-2003 aronb       Added automatic ConfigElement upgrades using XSLT.
Oct-10-2003 aronb       Added multiple inheritance for config element
                        definitions.
Oct-06-2003 patrickh    Added jccl::ConfigElement::getVersion().
                        NEW VERSION: 0.12.3
Aug-16-2003 patrickh    Updated to Tweek 0.15.
                        NEW VERSION: 0.12.2
Aug-15-2003 aronb       Fixed RTRC so that it now works with vrjconfig.
                        NEW VERSION: 0.12.1
Jul-10-2003 patrickh    Removed the ConfigUpdater utility.
Jul-10-2003 nonchocoboy Merged everything from jccl_config_refactor_branch.
                        Among other things, this officially renames "config